[gd_scene load_steps=2 format=3 uid="uid://w540aucf2qc3"]

[ext_resource type="Script" path="res://program_52a.gd" id="1_wchi4"]

[node name="Program52a" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
offset_left = -3.0
offset_top = -1.0
offset_right = -3.0
offset_bottom = -1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_wchi4")

[node name="length" type="Label" parent="."]
layout_mode = 0
offset_left = 155.0
offset_top = 31.0
offset_right = 242.0
offset_bottom = 123.0
text = "Length:"
horizontal_alignment = 1
vertical_alignment = 1

[node name="width" type="Label" parent="."]
layout_mode = 0
offset_left = 155.0
offset_top = 168.0
offset_right = 242.0
offset_bottom = 260.0
text = "Width:"
horizontal_alignment = 1
vertical_alignment = 1

[node name="area" type="Label" parent="."]
layout_mode = 0
offset_left = 155.0
offset_top = 292.0
offset_right = 1074.0
offset_bottom = 384.0
text = "Area:"

[node name="peri" type="Label" parent="."]
layout_mode = 0
offset_left = 155.0
offset_top = 384.0
offset_right = 1074.0
offset_bottom = 476.0
text = "Perimeter:"

[node name="lsolv" type="LineEdit" parent="."]
layout_mode = 0
offset_left = 242.0
offset_top = 31.0
offset_right = 585.0
offset_bottom = 122.0

[node name="wsolv" type="LineEdit" parent="."]
layout_mode = 0
offset_left = 242.0
offset_top = 168.0
offset_right = 585.0
offset_bottom = 259.0

[node name="calc" type="Button" parent="."]
layout_mode = 0
offset_top = 528.0
offset_right = 304.0
offset_bottom = 651.0
text = "Calculate"

[node name="clear" type="Button" parent="."]
layout_mode = 0
offset_left = 402.0
offset_top = 528.0
offset_right = 706.0
offset_bottom = 651.0
text = "Clear"

[node name="exit" type="Button" parent="."]
layout_mode = 0
offset_left = 844.0
offset_top = 528.0
offset_right = 1148.0
offset_bottom = 651.0
text = "Exit"

[connection signal="pressed" from="calc" to="." method="_on_calc_pressed"]
[connection signal="pressed" from="clear" to="." method="_on_clear_pressed"]
[connection signal="pressed" from="exit" to="." method="_on_exit_pressed"]
